deployments/api-version-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: api-app
    version: "blue"
  name: api-app-blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-app
      version: "blue"
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: api-app
        version: "blue"
    spec:
      containers:
      - image: us-central1-docker.pkg.dev/iit-cc/iit-cc/api-app:2.0.0
        name: api-app
        resources: {}
status: {}
