deployments/api-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: api-app-blue
  name: api-app-blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-app-blue
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: api-app-blue
        color: blue  # Added new label color: blue
    spec:
      containers:
      - image: us-central1-docker.pkg.dev/iit-cc/iit-cc/api-app:2.0.0
        name: api-app
        resources: {}
status: {}

---

apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: api-app-blue  # Updated app label to api-app-blue
  name: api-app-service-blue  # Updated name to api-app-service-blue
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: api-app-blue  # Updated app label to api-app-blue
  type: NodePort
status:
  loadBalancer: {}
