deployments/api-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: api-app-green
  name: api-app-green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-app-green
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: api-app-green
        color: green  # Added new label color: green
    spec:
      containers:
      - image: us-central1-docker.pkg.dev/iit-cc/iit-cc/api-app:2.0.0
        name: api-app
        resources: {}
status: {}

---

apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: api-app-green
  name: api-app-service-green
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: api-app-green
  type: NodePort
status:
  loadBalancer: {}
