deployments/svc-blue.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: api-app
  name: api-app-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: api-app
    version: "blue"
  type: NodePort
status:
  loadBalancer: {}
